[package]
name = "detector"
version = "0.1.0"
authors = ["Asapin <1559761+Asapin@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vec1 = { version = "1.6.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1"
strsim = "0.6.0"