[package]
name = "detector"
version = "0.1.4"
authors = ["Asapin <1559761+Asapin@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vec1 = { version = "^1", features = ["serde"] }
serde = { version = "^1", features = ["derive"] }
regex = "^1"
strsim = "^0"